# tidymac

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
npm/tidymac/: package.json
npm/tidymac-darwin-arm64/: package.json
npm/tidymac-darwin-x64/: package.json
src/: app.rs  cleaner.rs  main.rs  system.rs
src/scanner/: apps.rs  brew.rs  cache.rs  cargo.rs  docker.rs  large_old.rs  logs.rs  mod.rs  node.rs  space.rs  trash.rs  xcode.rs
src/ui/: apps.rs  config.rs  dev.rs  home.rs  large_old.rs  layout.rs  mod.rs  scan.rs  smart_scan.rs  space_lens.rs  theme.rs
