[package]
name = "tidymac"
version = "0.2.0"
edition = "2024"
description = "A TUI system cleaner for macOS"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
jwalk = "0.8"
rayon = "1.10"
libc = "0.2"
parking_lot = "0.12"
trash = "5"
dirs = "6"
bytesize = "2"
